# openai_chatbot

./: .sample_env  README.md  postman_collection.json  pyproject.toml
src/: run.py
src/app/: __init__.py
src/app/chatbot/: __init__.py  chatbot_api.py  forms.py  routes.py  test.py
src/app/generic/: __init__.py  routes.py
